[package]
name = "twba-twitch-fetcher"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twba-backup-config = { version = "0.1.1", git = "https://github.com/OMGeeky/backup_config.git" }
twba-local-db = { version = "0.2", git = "https://github.com/OMGeeky/twitch_backup.local_db.git" }
twba-twitch-data = { version = "0.3", git = "https://github.com/OMGeeky/twitch_data.git" }
twba-common = { version = "0.2", git = "https://github.com/OMGeeky/twba.common.git" }

tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "macros"] }

shellexpand = "3.1"
thiserror = "1.0"
anyhow = "1.0"

chrono = "0.4"
