[package]
name = "twba-twitch-fetcher"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twba-twitch-data = { version = "0.4", git = "https://github.com/OMGeeky/twitch_data.git" }
twba-common.workspace = true

tracing = "0.1"
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "macros"] }

shellexpand = "3.1"
thiserror = "1.0"
anyhow = "1.0"

chrono = "0.4"
